Change log for Bos Wars
-----------------------

Development version:
- Correct the draw level of some unit types (Kalle Olavi Niemitalo)
- Update the documentation of the scripting API (Francois Beerten)
- On Windows, use the application directory to save user data (Nehal Mistry)
- Fix crash at the end of the Tutorial campaign (Francois Beerten)

Version 2.6 (2010 04 11):
- Fix crash on exit in Windows (Francois Beerten, Nehal Mistry, Jimmy Salmon)
- Fix bug map editor places magma pump next to hotspot. (Kalle Olavi Niemitalo)
- Support libpng 1.4 (Francois Beerten)
- Fix resource consumption and production issues when rescueing units 
  (Kalle Olavi Niemitalo)
- Add portuguese (pt-pt) translation (Tiago Faria)
- Add the 4on4 map (Michiel van der Wulp)
- Add the hospitality map (Kyran Jackson)
- Add italian translation (Simone Rucci)
- Fix bug #29110 "Fatal error 'bad player' when loading map to editor"
  (Francois Beerten)
- Discard NewOrder if it refers to destroyed unit (Kalle Olavi Niemitalo)
- Recover map specific triggers and settings when loading a saved game (Francois Beerten)
- Add the bottleneck map (Kyran Jackson)
- Make GLMaxTextureSize configurable for systems where the value reported
  by OpenGL causes slow displays (Kalle Olavi Niemitalo)
- Add the Go-East map (Michiel van der Wulp)
- Added a new background image for the swindler campaign (Johannes Engelhardt, Francois Beerten)
- Add the lava-river map (Michiel van der Wulp)
- Add the Swindler campaign (Francois Beerten and Ruben Diaz)
- Fix teams in UnSelectUnit (Kalle Olavi Niemitalo)
- Removed broken elites campaign and maps (Francois Beerten)
- Add code for dumping all received SDL events to stdout
  (Kalle Olavi Niemitalo)
- Work around bug #27982 mouse centered when clicking in the window after
  having left. (Kalle Olavi Niemitalo and Francois Beerten)
- Fix bug #25178 in patch editor; mouse placement confusion (Jimmy Salmon)
- Nukes target the center of the target. (Jann Horn)